# Stretch3-Sim-to-Real

./: README.md  nav_goal.py
Manipulation/: README.md
Navigation/: DIAGNOSE.md  README.md  SETUP.md  get_pose.py
manipulation/: package.xml  setup.py
manipulation/manipulation/: grasper.py  mani_launch.sh  marker_pose.py
manipulation/urdf/: stretch_ik_modified.urdf
src/my_stretch_launch/: CMakeLists.txt  package.xml
src/my_stretch_launch/launch/: grasp_and_nav.launch.py
stretch_script/: README.md  dock_pos.sh  dock_to_origin.sh  dock_to_table.sh  get_pose.py  kill.sh  launch_nodes.sh  nav_goal.py  pick_object.sh  place_object.sh  poses.conf  return_home.sh  return_to_origin.sh  run_task.sh  set_initial_pose.sh  teleop.py
